--- a/examples/apps/slides_app/output_presentation.html
+++ b/examples/apps/slides_app/output_presentation.html
@@ -242,7 +242,7 @@
         </div>
       </div>
       <div class="slide-footer">
-        <div class="slide-date">22-May-25</div>
+        <div class="slide-date">20-May-25</div>
         <div class="slide-number">1 / 4</div>
       </div>
     </section>
@@ -262,7 +262,7 @@
         </div>
       </div>
       <div class="slide-footer">
-        <div class="slide-date">22-May-25</div>
+        <div class="slide-date">20-May-25</div>
         <div class="slide-number">2 / 4</div>
       </div>
     </section>
@@ -282,8 +282,7 @@
         <table class="table table-sm table-borderless bg-transparent">
           <thead style="background-color: #cce5ff;">
             <tr>
-              <th>ISIN</th>
-               <th>Name</th>
+              <th>Asset</th>
               <th>Units</th>
               <th>Price</th>
               <th>Notional</th>
@@ -291,13 +290,14 @@
             </tr>
           </thead>
           <tbody>
-            <tr><td>US0378331005</td><td>APPLE INC</td><td>146.0</td><td>6.38</td><td>931.48</td><td>7.26%</td></tr>
-<tr><td>US4642874576</td><td>ISHARES 1-3 YEAR TREASURY BO</td><td>202.0</td><td>58.90</td><td>11897.80</td><td>92.74%</td></tr>
+            <tr><td>Cash</td><td>1000</td><td>1.00</td><td>1000.00</td><td>2.92%</td></tr>
+<tr><td>Bonds</td><td>200</td><td>103.50</td><td>20700.00</td><td>60.53%</td></tr>
+<tr><td>Equities</td><td>50</td><td>250.00</td><td>12500.00</td><td>36.55%</td></tr>
           </tbody>
           <tfoot>
             <tr>
               <th colspan="3">Total</th>
-              <th>12829.28</th>
+              <th>34200.00</th>
               <th>100.00%</th>
             </tr>
           </tfoot>
@@ -306,7 +306,7 @@
         </div>
       </div>
       <div class="slide-footer">
-        <div class="slide-date">22-May-25</div>
+        <div class="slide-date">20-May-25</div>
         <div class="slide-number">3 / 4</div>
       </div>
     </section>
@@ -327,7 +327,7 @@
         </div>
       </div>
       <div class="slide-footer">
-        <div class="slide-date">22-May-25</div>
+        <div class="slide-date">20-May-25</div>
         <div class="slide-number">4 / 4</div>
       </div>
     </section>
