--- a/mainsequence/reportbuilder/base_templates/base_template.html
+++ b/mainsequence/reportbuilder/base_templates/base_template.html
@@ -4,7 +4,9 @@
   <meta charset='UTF-8'><meta name='viewport' content='width=device-width, initial-scale=1'>
   <title>{{ title }}</title>
   <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css' rel='stylesheet'>
-  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script> <style>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <style>
     body,html{margin:0;padding:0;width:100%;background:#e0e0e0;font-family:{{ font_family }};font-size:{{ base_font_size }}px;}
     body {
       display: flex; /* Use flexbox to center content */
@@ -12,20 +14,21 @@
       align-items: center; /* Center children horizontally */
       min-height: 100vh; /* Ensure body takes at least full viewport height */
       padding-top: 20px; /* Add some padding at the top */
-      padding-bottom: 20px; /* Add some padding at the bottom for scroll room with button */
+      padding-bottom: 80px; /* Increased padding for buttons */
+      transition: padding 0.3s ease, background 0.3s ease; /* Smooth transition */
     }
     #slidesContainer {
-      /* The slidesContainer itself doesn't need specific centering if body is flex */
-      /* It will naturally be centered by the body's align-items: center */
+      /* Container for slides */
     }
     .slide{position:relative;display:flex;flex-direction:column;overflow:hidden;box-sizing:border-box;
             width:338.667mm;height:190.5mm;padding:15mm;page-break-after:always;background:#f8f9fa;
             margin-bottom: 10mm; /* Space between slides */
             box-shadow: 0 0 5px rgba(0,0,0,0.1);
+            transition: width 0.3s ease, height 0.3s ease, margin 0.3s ease, box-shadow 0.3s ease, padding 0.3s ease; /* Smooth transitions */
           }
-    .slide-header,.slide-footer{position:absolute;left:15mm;right:15mm;display:flex;justify-content:space-between;align-items:center;}
+    .slide-header,.slide-footer{position:absolute;left:15mm;right:15mm;display:flex;justify-content:space-between;align-items:center; z-index: 10;}
     .slide-header{top:5mm;} .slide-footer{bottom:5mm;font-size:0.85em;color:#555;}
-    .slide-body{flex:1;display:flex;flex-direction:column;justify-content:center;overflow:hidden;}
+    .slide-body{flex:1;display:flex;flex-direction:column;justify-content:center;overflow:hidden; z-index: 5; position: relative; transition: all 0.3s ease;}
     .cover-slide{align-items:center;justify-content:center;text-align:center;}
     .cover-bg{position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;z-index:-1;}
     .cover-title{font-size:3rem;font-weight:700;color:{{ title_color }};}
@@ -34,28 +37,106 @@
       max-height: 30px;
       width: auto;
     }
-    #exportPdfButton {
+
+    #buttonContainer {
       position: fixed;
       bottom: 20px;
       right: 20px;
       z-index: 1000;
+      display: flex;
+      gap: 10px; /* Space between buttons */
+    }
+
+    #exportPdfButton, #playButton {
       padding: 10px 20px;
-      background-color: #007bff;
       color: white;
       border: none;
       border-radius: 5px;
       cursor: pointer;
-      font-size: 16px;
+      font-size: 16px; /* Base font size */
+      box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+      transition: background-color 0.2s ease;
+      display: flex; /* Added for icon centering */
+      justify-content: center; /* Added for icon centering */
+      align-items: center; /* Added for icon centering */
     }
+
+    #exportPdfButton {
+      background-color: #007bff;
+    }
+    #exportPdfButton:hover {
+      background-color: #0056b3;
+    }
+
+    #playButton {
+      background-color: #28a745; /* Green */
+      width: 50px; /* Fixed width */
+      height: 40px; /* Match PDF button height (adjust padding if needed) */
+      padding: 10px; /* Adjusted padding */
+      font-size: 1.2rem; /* Make icon slightly larger */
+    }
+     #playButton:hover {
+        background-color: #218838;
+     }
+
+    /* Fullscreen Mode Styles */
+    body.fullscreen-mode {
+      padding: 0;
+      display: block;
+      background: #333;
+      overflow: hidden;
+    }
+    body.fullscreen-mode #slidesContainer {
+       width: 100%;
+       scroll-snap-type: y mandatory;
+       overflow-y: scroll;
+       height: 100vh;
+    }
+    body.fullscreen-mode .slide {
+      width: 100vw;
+      height: 100vh;
+      margin-bottom: 0;
+      box-shadow: none;
+      page-break-after: unset;
+      border-radius: 0;
+      scroll-snap-align: start;
+      background: #333;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    body.fullscreen-mode .slide-body {
+        background: #f8f9fa;
+        max-width: 1600px;
+        max-height: 90vh;
+        width: 90%;
+        height: auto;
+        aspect-ratio: 16 / 9; /* Kept optional 16:9 ratio */
+        overflow: auto;
+        padding: 40px;
+        box-shadow: 0 0 20px rgba(0,0,0,0.6);
+        border-radius: 8px;
+        flex: 0 0 auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    body.fullscreen-mode .slide-header,
+    body.fullscreen-mode .slide-footer {
+        display: none;
+    }
+
+
     @media print {
       body, html { background: #fff; }
       body {
-        display: block; /* Revert flex centering for print */
+        display: block;
         padding-top: 0;
         padding-bottom: 0;
       }
       .slide { margin-bottom: 0; box-shadow: none; }
-      #exportPdfButton { display: none; }
+      #buttonContainer { display: none; }
       @page {
         size: A4 landscape;
         margin: 0;
@@ -65,11 +146,46 @@
 </head>
 <body>
   <div id='slidesContainer'>{{ slides|safe }}</div>
-  <button id="exportPdfButton">Export to PDF</button>
+
+  <div id="buttonContainer">
+      <button id="playButton" title="Toggle Fullscreen View"><i class="bi bi-play-fill"></i></button>
+      <button id="exportPdfButton" title="Export to PDF">PDF</button>
+  </div>
+
   <script>
     document.getElementById('exportPdfButton').addEventListener('click', function() {
       window.print();
     });
+
+    const playButton = document.getElementById('playButton');
+    const body = document.body;
+    // No need for slidesContainer here anymore
+    let isFullscreen = false;
+
+    // Define icon HTML
+    const playIcon = '<i class="bi bi-play-fill"></i>';
+    const stopIcon = '<i class="bi bi-stop-fill"></i>';
+
+    playButton.addEventListener('click', function() {
+      isFullscreen = !isFullscreen;
+      body.classList.toggle('fullscreen-mode', isFullscreen);
+
+      if (isFullscreen) {
+        playButton.innerHTML = stopIcon; // Set stop icon
+        playButton.title = 'Exit Fullscreen View';
+        playButton.style.backgroundColor = '#dc3545'; // Red color
+        const firstSlide = document.querySelector('.slide');
+        if(firstSlide) {
+            firstSlide.scrollIntoView({ behavior: 'smooth' });
+        }
+      } else {
+        playButton.innerHTML = playIcon; // Set play icon
+        playButton.title = 'Toggle Fullscreen View';
+        playButton.style.backgroundColor = '#28a745'; // Green color
+        window.scrollTo({ top: 0, behavior: 'smooth' });
+      }
+    });
+
   </script>
 </body>
 </html>
