Update base_template.html, model.py, and slide_templates.py

--- a/mainsequence/reportbuilder/base_templates/base_template.html
+++ b/mainsequence/reportbuilder/base_templates/base_template.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <style>
-    body,html{margin:0;padding:0;width:100%;background:#e0e0e0;font-family:{{ font_family }};font-size:{{ base_font_size }}px;}
+    body,html{margin:0;padding:0;width:100%;background:#e0e0e0;font-family:{{ font_family }};}
+
     body {
       display: flex; flex-direction: column; align-items: center;
       min-height: 100vh; padding-top: 20px; padding-bottom: 80px;
