--- a/mainsequence/reportbuilder/base_templates/base_template.html
+++ b/mainsequence/reportbuilder/base_templates/base_template.html
@@ -257,6 +257,15 @@
       #buttonContainer { display: none; }
       @page { size: A4 landscape; margin: 0; }
     }
+
+    /* Hide PDF button for now */
+    #pdfOption {
+      display: none;
+    }
+
+    #menuButton {
+      display: none;
+    }
   </style>
 </head>
 <body>
